logs/watchdog_20251013_1109.log
[13/10/2025 11:09:11,06] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025 11:09:11,28] END WATCHDOG 
